fixed issue with hamburger menu being misallaligned when on smaller  screen

--- a/css/style.css
+++ b/css/style.css
@@ -105,7 +105,6 @@ body{
     top: 0;
     left: 0;
     z-index: 100;
-    /*position: fixed;*/
 }
 
 .header .logo img{
@@ -115,18 +114,21 @@ body{
     left: 0;
 }
 
-.header .navbar {
+@media  (min-width: 1000px){
+    .header .navbar {
     position: absolute;
     left: 50%;
     transform: translateX(-50%);
 }
+    
+}
+
 
 
 .header .navbar ul{
     list-style-type: none;
     display: flex;
     align-items: center;
-    /*justify-content: space-around;*/
 }
 
 .header .navbar ul li{
@@ -153,9 +155,7 @@ body{
     font-size: 3rem;
     display: none;
     cursor: pointer;
-    transform: translateX(-50%);
-    left: 50%;
-    position: absolute;
+   
 }
 
 .home{
